# ksim

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/ksim/: CMakeLists.txt  KSim.td  KSimAttributes.td  KSimDialect.h  KSimDialect.td  KSimOps.h  KSimOps.td  KSimPasses.h  KSimTypes.h  KSimTypes.td  Passes.td
include/ksim/Utils/: LLVMQueue.h  RegInfo.h
lib/: CMakeLists.txt  KSimDialect.cpp  KSimTypes.cpp
lib/Transforms/: AddDebugInfo.cpp  AddZeroReset.cpp  CMakeLists.txt  CleanDesign.cpp  CombToLLVM.cpp  DCE.cpp  DumpComb.cpp  Flatten.cpp  IsolateTopModule.cpp  LoadFIRRTL.cpp  LowerState.cpp  LowerToLLVM.cpp  MiliToMoore.cpp  PassDetails.h  RemoveSV.cpp  SlicePropagation.cpp  SlicePropagation.td  TemporalFusion.cpp  TemporalFusion2.cpp
lib/Utils/: CMakeLists.txt  LLVMQueue.cpp
tools/: CMakeLists.txt
tools/ksim/: CMakeLists.txt  ksim.cpp
tools/ksim-opt/: CMakeLists.txt  ksim-opt.cpp
